# TrabalhoSE_VDC_02

./: .gitignore  CMakeLists.txt  README.md  main.c
lib/: ws2812.c  ws2812.h
